# conversor-folha-dominio

./: .gitignore  README.md  env-example.json  lista_empresas.txt  pyproject.toml  sql_to_generate_columns_of_tables.sql
layouts/: 10_foempregados_atestados_ocupacionais_exames.TXT  10_foempregados_envios_esocial.TXT  10_foempregados_plano_saude.TXT  1_gecontador.TXT  1_gesocios.TXT  2_foagentes_integracao.TXT  2_fobancos.TXT  2_focoordenador_estagio.TXT  2_foinstituicao_ensino.TXT  2_fomedicos.TXT  2_fooperadoraplanosaude.TXT  2_foparmto.TXT  2_fosindicatos.TXT  2_geempre.TXT  3_focargos.TXT  3_foccustos.TXT  3_fodeptos.TXT  3_foesocial_dados_eventos.TXT  3_foesocial_lotes.TXT  3_fofiliais.TXT  3_fohorarios.TXT  3_foservicos.TXT  3_fotabelas.TXT  4_fohorarios_intervalos.TXT  4_fojornadas.TXT  4_foparmto_alteracao_envios_esocial.TXT  4_fovigencias_servico.TXT  5_focargos_alteracao_envios_esocial.TXT  5_fohorarios_alteracao_envios_esocial.TXT  5_fojornadas_horarios.TXT  5_fovigencias_servico_envios_esocial.TXT  6_foempregados.TXT  7_foempreg_contrsind.TXT  7_foempregados_atestados_ocupacionais.TXT  7_foempregados_certidao_civil.TXT  7_foferias_coletivas.TXT  7_foferias_gozo.TXT  7_fofilhos.TXT  7_fohistemprant.TXT  8_foafastamentos.TXT  (+5 more)
sql_executar_pos_conversao/: 1_erro_6_acessar_filial.sql  2_insere_tabela_aliquota_interestadual_icms.sql  3_insere_medias_sindicatos.sql  4_ajusta_demitidos_importacao.sql  4_ajusta_demitidos_novo_tabela_calculo.sql  5_ajusta_salarios_trunca_casas.sql  6_Ajusta_parametros_nao_excluir_dados_esocial.sql  SQLs_executar_pos_conversao.7z
(+61 files in other folders)
