[tool.poetry]
name = "conversor-dominio"
version = "0.1.0"
description = ""
authors = ["ElderVivot <eldervivot@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyodbc = "^4.0.34"
pandas = "^1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.982"
flake8 = "^5.0.4"
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
